# GDOU_work_stu_management

./: CMakeLists.txt  README.md
deb/: TEST8
resources/: image.qrc
src/: CMakeLists.txt  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
